--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,8 +8,8 @@ dependencies = [
     "uvicorn[standard]"
 ]
 
-[tool.uv]
-dev-dependencies = [
+[dependency-groups]
+dev = [
     "ruff",
     "httpx",
     "types-requests"
